--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
         <div class="title">
             <span>etch-a-sketch</span>
         </div>
-        <div class="whiteboard">
+        <div class="whiteboard shadow">
         </div>
         <div class="controls">
             <div class="left ball">
-                <div class="up-arrrow"></div>
-                <div class="down-arrow"></div>
+                <!-- <div class="content-left"> -->
+                <i class="fas fa-sort-up fa-3x"></i>
+                <!-- <p class="updown">Arrow keys</p> -->
+                <i class="fas fa-sort-down fa-3x"></i>
+                <!-- </div> -->
             </div>
             <div class="center">
                 <div class="div-slider">
@@ -32,16 +35,17 @@
                     <p class="pixels">51x51</p>
                 </div>
                 <button class="button-clear">Clear all</button>
-
             </div>
             <div class="right ball">
-                <div class="left-arrrow"></div>
-                <div class="right-arrow"></div>
+                <i class="fas fa-caret-left fa-3x"></i>
+                <!-- <p class="updown">Arrow keys</p> -->
+                <i class="fas fa-caret-right fa-3x"></i>
             </div>
 
 
         </div>
     </div>
+    <div class="directions">Play with Mouse or Keyboard arrow keys <strong>⬆ ⬇ ⬅ ➡</strong></div>
     <div class="footer">
         <span>Created by <strong>pieroguerrero</strong></span>
         <a href="https://github.com/pieroguerrero">
